<resources>
    <string name="app_name">Tales Of Caelumora</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="music_volume">music volume</string>
    <string name="vfx_volume">VFX volume</string>
    <string name="close_app">Close app</string>
    <string name="sure_to_leave">Are you sure you want to leave Caelumero?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_id" translatable="false">1070439251882-h7fthb063puv7t5indum4qjtsatba15m.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="ok">OK</string>

    <!-- login screen strings -->
    <string name="google_signin_client_not_initialized">Unable to sign in at the moment. Please try again later.</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="password_requirements">Please use a secure password (at least 1 uppercase, 1 lowercase, 1 special character, and a minimum length of 8 characters).</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="existing_user_account">User account already exists</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="signin_failed">Sign-in failed</string>
    <string name="google_signin_successful">Signed in with Google account</string>
    <string name="google_signin_failed">Failed to sign in with Google account. Please try again later.</string>
    <string name="signin_successful">Sign-in successful</string>
    <string name="signin_with_google_account">Sign in with Google account</string>
    <string name="try_again_later">try again later</string>
    <string name="signin_with_google_account_failed">sign in with google failed</string>
    <string name="forward">forward</string>
    <string name="back">back</string>
    <string name="air">air</string>
    <string name="water">water</string>
    <string name="nature">nature</string>
    <string name="fire">fire</string>
    <string name="legend">legend</string>

    <!--Attack types -->
    <string name="single_damage">Attack on a single enemy hero</string>
    <string name="multi_damage">Attack on each enemy hero. If an enemy dies, excess damage hits the player. If no enemies are on the bench, your hero attacks the opponent directly for the amount of damage dealt.</string>
    <string name="single_damage_and_heal">Attack on a single enemy hero. Heals the hero for 50% of the damage dealt.</string>
    <string name="multi_damage_and_heal">Attack on each enemy hero. Heals the hero for 50% of the total damage dealt. If an enemy dies, excess damage hits the player. If no enemies are on the bench, your hero attacks the opponent directly for the amount of damage dealt.</string>
    <string name="single_damage_and_protect">Attack on a single enemy hero. Protects the hero from the next incoming attack.</string>
    <string name="multi_damage_and_protect">Attack on each enemy hero. Protects the hero from the next incoming attack. If an enemy dies, excess damage hits the player. If no enemies are on the bench, your hero attacks the opponent directly for the amount of damage dealt.</string>
    <string name="player_heal">Heals the player</string>
    <string name="load_image_sources">Load missing image sources</string>
    <string name="from"> from </string>
    <string name="image_resources_loaded"> image resources loaded</string>
    <string name="stack_was_shuffeld">Decks werden gemischt</string>
    <string name="battle_ends_in">Battle ends in:</string>
    <string name="new_battle">new battle</string>
    <string name="battle_history">battle history</string>
    <string name="new_multi_battle">new multi battle</string>
    <string name="choose_a_character">Choose a character</string>
    <string name="on_boarding_one">Hello and welcome to Caelumero!\nI am Elara, and I will help you navigate in our world. But first, it would be nice if you could tell me your name.\n\nPlease enter your name in the field above.\n\n</string>
    <string name="on_boarding_two">%s! A fantastic name!! Now, choose a character that suits you. You can adjust your name and character later at any time under your profile settings.\n\nChoose and confirm with Ok\n\n</string>
    <string name="player_confirm_deck">\n\n\"I choose the %s deck\"\n\n</string>
    <string name="choose_deck_one">What a great character!!\n\nTo get things started right away, I\'ll give you a starter deck. You can choose between an Air, Water, Plant, and Fire deck.\nAll decks are approximately equally strong.\nJust select a deck that you think suits you.\n\n(Simply click on one of the four buttons above)\n\n</string>
    <string name="choose_deck_confirm">You have chosen the %s-deck.\n\n Is this right?</string>
    <string name="choose_deck_finish">An excellent choice %s, and I believe the deck aligns well with your preferences!\n\nNow that we have everything you need to start the game, let\'s get going!\n\n</string>
    <string name="first_day_in_Caelumero">\"First day in Caelumero\"</string>
    <string name="now_available">now available</string>
    <string name="available_in">available in</string>
    <string name="get_daily_free_booster">Get daily free booster package</string>
    <string name="new_cards">New cards!</string>
    <string name="get_cards">Received %s new cards</string>
    <string name="choose_cards_to_sell">Choose cards to sell!</string>
    <string name="space_backpack">Space in the backpack: </string>
    <string name="sell">sell</string>
    <string name="asking_price">asking price:</string>
    <string name="your_balance">your balance</string>
    <string name="you_can_not_sell_your_decks_last_hero">You can not sell your decks last hero!</string>
    <string name="you_ve_got_to_sell_cards">You need to sell some cards since your backpack doesn\'t have enough space</string>
    <string name="sell_cards">sell cards</string>
    <string name="exchange_diamonds">diamond shop</string>
    <string name="lands">Lands</string>
    <string name="random_air_land">random air land</string>
    <string name="random_fire_land">random fire land</string>
    <string name="random_water_land">random water land</string>
    <string name="random_plant_land">random nature land</string>
    <string name="single_cards">Single cards</string>
    <string name="random_supporter_card">random supporter card</string>
    <string name="random_hero_card">random hero card</string>
    <string name="rare_guaranteed_booster">Rare Guaranteed Booster\n(4 cards random 1 card rare or ultra rare)</string>
    <string name="normales_booster_n_5_zuf_llige_karten">normal booster\n(5 random cards)</string>
    <string name="random_card_rare_or_ultra_rare">random card rare or ultra rare</string>
    <string name="booster">Booster</string>
    <string name="normal_booster_info">contains: 5 x random card</string>
    <string name="rare_booster_info">contains: 4 x random cards and 1 random rare or ultra rare card</string>
    <string name="exchange_your_diamonds_for_single_cards_or_booster_packages">exchange your diamonds for single cards or booster packages</string>
    <string name="spawn_rate_random_rare_ultra_rare">Spawnrate: 54% supporter rare, 6% supporter ultra rare, 36% Hero rare, 4% Hero ultra rare</string>
    <string name="rare_or_ultra_rare_random_card">Rare or ulta rare random card</string>
    <string name="spawnrate_land_cards">Spawnrate: 25% air, 25% fire, 25% water, 25% plant</string>
    <string name="landcard_random">Landcard random</string>
    <string name="spawnrate_single_card">Spawnrate: 80% land cards, 12% Supporter normal, 1.2% Supporter rare, 0.1% Supporter ultra rare, 6% Hero normal, 0.6% Hero rare, 0.06% Hero ultra rare</string>
    <string name="purchase_item_confirmation">Do you want to purchase the item for %s diamonds?</string>
    <string name="not_enough_diamonds">Not enough diamonds</string>
    <string name="game_shop">game shop</string>
    <string name="booster_of_the_day">Booster Of The Day</string>
    <string name="booster_of_the_day_water">contains: 4 random water lands and 1 random water hero</string>
    <string name="booster_of_the_day_fire">contains: 4 random fire lands and 1 random fire hero</string>
    <string name="booster_of_the_day_air">contains: 4 random air lands and 1 random air hero</string>
    <string name="booster_of_the_day_plant">contains: 4 random nature lands and 1 random nature hero</string>
    <string name="increase_your_bag_s_size">Upgrade bag</string>
    <string name="increase_bag_size_info">Increase the capacity of your backpack by 20 cards (available 3 times)</string>
    <string name="max_reached">You\'ve reached the max level</string>
    <string name="language">en</string>
    <string name="at">at</string>
    <string name="yesterday">yesterday</string>
    <string name="you">you</string>
    <string name="today">today</string>
    <string name="message">Write a message ..</string>
    <string name="profilsettings">Profil</string>
    <string name="bag_size">Bag size</string>
    <string name="deck_size">Deck size</string>
    <string name="hero_bank_size">Hero bank size</string>
    <string name="end_round">End round</string>

</resources>