<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LibraryFragment"
    android:background="@drawable/caelumero">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="267dp"
        android:layout_height="475dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="1"
        tools:listitem="@layout/card_item" />

    <ImageView
        android:id="@+id/btn_back_from_library"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/chevron_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#88ffffff"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingTop="8dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rv"
        app:layout_constraintTop_toTopOf="@+id/rv">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="Name:"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/aclonica"
            android:text="Elionora"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="Type:"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/aclonica"
            android:text="Hero"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="Rarity:"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_rarity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/aclonica"
            android:text="normal"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/first_ability_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="First Ability Type:"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_first_ability_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/aclonica"
            android:text="single damage"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ll_sec_ability_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="Second Ability Type:"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_sec_ability_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/aclonica"
            android:text="single damage"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/land_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/landbar_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/air_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#44dddddd"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:src="@drawable/air_ico"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_air_resources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/air"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore=",HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fire_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#44dddddd"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:src="@drawable/fire_ico"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_fire_resources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/fire"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore=",HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/water_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#44dddddd"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:src="@drawable/water_ico"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_water_resources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/water"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore=",HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nature_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="#44dddddd"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:src="@drawable/nature_ico"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_nature_resources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nature"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore=",HardcodedText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navbar_bg_water"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btn_back_in_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:contentDescription="Button for navigation"
                android:src="@drawable/chevron_left"
                app:tint="@color/smooth_gold"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/smooth_gold"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:contentDescription="Button for navigation"
                android:src="@drawable/chevron_right"
                app:tint="@color/smooth_gold"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:textColor="@color/smooth_gold"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/top_bar_bg"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <TextView
        android:id="@+id/marqueeText_library"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_weight="2"
        android:background="@drawable/marquee_text_bg"
        android:ellipsize="marquee"
        android:focusable="true"
        android:fontFamily="@font/aclonica"
        android:gravity="center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="song: Secret Of The Silverforest - Danny D."
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back_from_library"
        app:layout_constraintTop_toTopOf="@+id/btn_back_from_library"
        tools:ignore=",HardcodedText,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>