<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfilFragment">




    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="686dp"
        android:layout_height="884dp"
        android:scaleType="centerCrop"
        android:src="@drawable/elara_side_looks_over_the_city"
        android:translationX="-105dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/img_elara_foreground"
        android:layout_width="485dp"
        android:layout_height="786dp"
        android:layout_marginTop="83dp"
        android:scaleType="centerCrop"
        android:src="@drawable/elara_solo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_bg_nigth"
        android:layout_width="880dp"
        android:layout_height="880dp"
        android:scaleType="centerCrop"
        android:src="@drawable/clarice_bgl"
        android:translationX="-160dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <ImageView
        android:id="@+id/img_bg_nigth_foreground"
        android:layout_width="880dp"
        android:layout_height="880dp"
        android:scaleType="centerCrop"
        android:src="@drawable/clarice_removebg_preview"
        android:translationX="-160dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_player"
        android:layout_width="0dp"
        android:layout_height="162dp"
        android:layout_marginTop="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_profil_header"
        tools:itemCount="1"
        tools:listitem="@layout/player_item"
        android:alpha="0.8"/>

    <TextView
        android:id="@+id/txt_profil_header_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="2dp"
        android:text="@string/profilsettings"
        android:fontFamily="@font/aclonica"
        android:textSize="32sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_profil_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/profilsettings"
        android:textColor="@color/smooth_gold"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="6dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/rv_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_back_back_from_profil"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/chevron_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_profil_header"
        app:layout_constraintBottom_toBottomOf="@id/txt_profil_header"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/txt_health_points_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_experience_points"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/black"
        android:text="HP" />
    <TextView
        android:id="@+id/txt_health_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_experience_points"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/white"
        android:text="HP" />

    <TextView
        android:id="@+id/txt_bag_size_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_health_points"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/black"
        android:text="@string/bag_size" />
    <TextView
        android:id="@+id/txt_bag_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_health_points"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/white"
        android:text="@string/bag_size" />

    <TextView
        android:id="@+id/txt_deck_size_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_bag_size"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/black"
        android:text="@string/deck_size" />
    <TextView
        android:id="@+id/txt_deck_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_bag_size"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/white"
        android:text="@string/deck_size" />

    <TextView
        android:id="@+id/txt_hero_bank_size_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_deck_size"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/black"
        android:text="@string/hero_bank_size" />
    <TextView
        android:id="@+id/txt_hero_bank_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_deck_size"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:fontFamily="@font/aclonica"
        android:textColor="@color/white"
        android:text="@string/hero_bank_size" />

    <ProgressBar
        android:id="@+id/pb_experience_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/progressbar_shape_seconddary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:progress="50"
        android:progressTint="@color/good_health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_player"/>

    <TextView
        android:id="@+id/txt_experience_points_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="14dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/aclonica"
        app:layout_constraintTop_toBottomOf="@id/pb_experience_bar"
        android:text="EP 450/600" />

    <TextView
        android:id="@+id/txt_experience_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/aclonica"
        app:layout_constraintTop_toBottomOf="@id/pb_experience_bar"
        android:text="EP 450/600" />

</androidx.constraintlayout.widget.ConstraintLayout>